# BasicMLP

./: .gitignore  .gitmodules  BasicMLP.sln  BasicMLP.vcxproj  BasicMLP.vcxproj.filters  CMakeLists.txt  CMakePresets.json  Layer.hpp  Main.cpp  Main.ilk  Network.cpp  Network.hpp  README.md
Tests/: NetworkTests.cpp  Tests.vcxproj
src/: CMakeLists.txt  DrawNetwork.cpp  Layer.cpp  Layer.hpp  Network.cpp  Network.hpp  Neuron.cpp  Neuron.hpp  Noise.cpp  Noise.hpp  Parameters.hpp  SimpleWindow.cpp  SimpleWindow.hpp  Vehicle.cpp  Vehicle.hpp  main.cpp  nnMath.hpp
src/Tests/: CMakeLists.txt  NetworkTests.cpp  README.md
x64/Debug/: Tests.exe.gta.testdurations
